--- a/index.css
+++ b/index.css
@@ -2,7 +2,9 @@ body
 {
     display: flex;
     flex-direction: column;
-    background-color: #1a1919;
+    /* background-color: #1a1919; */
+    background: rgb(0,0,24);
+    background: linear-gradient(90deg, rgba(0,0,24,1) 0%, rgba(23,23,23,1) 46%, rgba(0,11,29,1) 100%);
 }
 
 .title
@@ -11,13 +13,46 @@ body
     font-weight: light;
     color: white;
     text-align: center;
-    margin-top: 20vh;
+    margin-top: 15vh;
+    margin-bottom: 5px;
+}
+
+.rec
+{
+    font: 24px "Audiowide";
+    color: rgb(175, 175, 175);
+    font-weight: lighter;
+    margin-left: 18%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#circleFlash
+{
+    margin-right: 0.25em;
+    background-color: #911212;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.activated
+{
+    animation-name: flash;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
 }
 
 .noteDiv
 {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin-right: 5%;
 }
 
 .wrapper
@@ -25,4 +60,20 @@ body
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 10vh;
+}
+
+.photo img
+{
+    /*: invert(1);*/
+    filter: invert(96%) sepia(32%) saturate(5210%) hue-rotate(324deg) brightness(104%) contrast(98%);
+    width: 10vw;
+    height: auto;
+}
+
+#note, #frequency
+{
+    font: 3em "Audiowide";
+    font-weight: light;
+    color: #fffc38;
 }
